<resources>
    <string name="hello_world">Hello world!</string>
    <string name="button_text_continue">Continue</string>
    <string name="app_name">Namakoti</string>
    <string name="signin">Sign in</string>
    <string name="introduction">Introduction</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_pwd"><u>Forgot Password</u></string>
    <string name="username">Username</string>
    <string name="mobile_number_signin">Mobile Number</string>
    <string name="otp_signin">OTP</string>
    <string name="password">Password</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="cpassword">CONFIRM PASSWORD</string>
    <string name="profile">Profile</string>
    <string name="reconfirmpassword">RE CONFIRM PASSWORD</string>
    <string name="salution">SALUTION</string>
    <string name="firstname">FIRST NAME</string>
    <string name="lastname">LAST NAME</string>
    <string name="middlename">MIDDLE NAME</string>
    <string name="dob">DATE OF BIRTH</string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="pobox">DOOR NO</string>
    <string name="postolcode">POSTAL CODE/ZIP CODE</string>
    <string name="city">City</string>
    <string name="state">STATE</string>
    <string name="country">COUNTRY</string>
    <string name="email">EMAIL</string>
    <string name="moblie">MOBILE</string>
    <string name="pwd_not_same">Password and Confirm password must be same</string>
    <string name="enter_pwd">Please enter the password</string>
    <string name="delete_account_error">Delete Account Error</string>
    <string name="signup_error">Signup error</string>
    <string name="error">Error</string>
    <string name="signin_error">SignIn error</string>
    <string name="pwd_error">Change Password</string>
    <string name="save_nama_error">Save nama error</string>
    <string name="save_nama_aditional_key">_savenama</string>
    <string name="signup_success">Signup success</string>
    <string name="signin_request">Do you want to signin?</string>
    <string name="email_exist">Email already exist , Please try with different one.</string>
    <string name="username_exist">Username already exist , Please try with different one.</string>
    <string name="phone_no_exist">Phone number already exist , Please try with different one.</string>
    <string name="signout_dlg_msg">If you log out, you will have to re-login by using internet/WiFi connection in order to continue.</string>
    <string name="signout">Sign out</string>
    <string name="get_god_list_error">No Namas available</string>
    <string name="delete_account_dlg_msg">If you delete Namakoti Account, you will have to re-register by using internet/WiFi connection in order to continue.</string>
    <string name="delete_account">Delete Namakoti Account</string>
    <string name="settings">Settings</string>
    <string name="profile1">Profile</string>
    <string name="setnama">Set Nama</string>
    <string name="chant_settings">Chant Gods</string>
    <string name="enternama">Enter Namam</string>
    <string name="publishnama">Publish Nama</string>
    <string name="application_and_site">The Application &amp; the Site</string>
    <string name="accountdetailes">Payment Details</string>
    <string name="jurisdiction_and_gov">Jurisdiction &amp; Governing Law</string>
    <string name="juridiction_law_text">These Terms and any disputes arising out of such Terms are governed by the laws of India and are subject to the jurisdiction of the courts in Hyderabad, Andhra Pradesh only.</string>
    <string name="third_party_cookies">Third party cookies might collect aggregated information like the frequency of your visit or the length. No Personal or Professional information is collected. The information collected might be used for analytics. 
A cookie may also be placed by our advertising partners. Such cookies are used only for purposes of tracking the effectiveness of advertising on our Website and no personal or professional information is gathered from you by the use of these cookies, nor is this information shared with any third parties. Third - party advertising companies or advertisement providers may also employ cookies. Such information will be anonymous and will be to measure the effectiveness of ads.
Most Web browsers automatically accept cookies. In case you do not want to accept our cookie policy, you can change the settings of your browser, blocking cookies may affect your user experience</string>
    <string name="cookies1">To estimate our audience size and usage pattern</string>
    <string name="cookies2">To store information about Your preferences, and so allow us to customise our Site according to Your individual interests</string>
    <string name="cookies3">To speed up Your searches</string>
    <string name="cookies4">To recogniseYou when You return to our Site</string>
    <string name="cookies5">Details of Your visits to our Site including, but not limited to, traffic data, location data, weblogs and other communication data, whether this is required for our own billing purposes or otherwise and the resources that You access</string>
    <string name="cookies6">Any other information You provide to us in connection with Your use of the website</string>
    <string name="cookies7">Payments are routed through Times of Money</string>
    <string name="cookies8">We do not save your personal or professional information using cookies. We only use cookies to personalize your experience</string>
    <string name="what_is_namakoti"><u>What is Namakoti</u></string>
    <string name="what_is_namakoti_text">In the Hindu Dharma, it is said that writing a God\'s name 10 million times or One Crore times can enable the soul to reach salvation.  While many of us would like to do this, we are often caught with time pressures – to write, keep track of the writing and finally have the books in which they are written printed &amp; sent to the appropriate temples.  Now with NAMAKOTI APPLICATION, you can have all this done using your smartphone. 
 
\n\nSo, whether you are Rama / Shiva / Sai Devotee, you can now use your smartphone for constant ‘diava chintana’ – or constant remembrance and utterance of God\'s name – enabling you to cleanse your thoughts and focus on the Supreme Being. 
We have built user interfaces to suit your style of chanting God\'s name; so depending on your specific need for a given time, you could choose
Swipe and Chant – Use simple finger based swipe utility to keep chanting God\'s name
\nKey-in Mode – Use preselected God\'s name and chant using a simple keyword select option
\nJapamala Mode – We know that some of us would like to use the  Japamala or the Rosary for chanting God\'s name.  To meet this specific requirement of yours, we have provided you with the e-Japamala interface. </string>
    <string name="what_is_namakoti_text2">As you write (chant) the name of your favourite God or Kula Daivam, you can use the unique facility provided by Namakoti to have your Namas printed and mailed to temples – either of your choice or those that are usually know for accepting such books (eg. Bhadrachalam, in Telangana, for Rama Koti).  
We have also provided with a facility where in you can upload scanned images of your manuscript, that is write the God\'s name in your own handwriting, scan this using the camera on your smartphone, have that image uploaded. We will then have the books printed with this, thereby giving you the satisfaction of seeing your own handwriting in the printed books. </string>
    <string name="jai_sri_ram_namakoti">JAI SRI RAM  *  OM NAMAH SHIVAYA * OM SRI SAI</string>
    <string name="in_the_hindu_darma">In the Hindu Dharma, it is said that writing a God\'s name 10 million times or One Crore times can enable the soul to reach salvation.  While many of us would like to do this, we are often caught with time pressures – to write, keep track of the writing and finally have the books in which they are written printed &amp; sent to the appropriate temples.</string>
    <string name="nowwith_nama_koti">\n\nNow With NAMAKOTI Application, You Can Have All This Done using your Smartphone.</string>
    <string name="so_whether_you_are">\n\nSo, whether you are Rama Bhakta, Shiva Bhakta or a Sai Devotee, you can now use your Smartphone for constant ‘dayva chintana’ – or constant remembrance and utterance of God’s name – enabling you to cleanse your thoughts and focus on the Supreme Being.
        \n\nWe have built user interfaces to suit your style of chanting God’s name; so depending on your specific need for a given time, you could choose.
        \n</string>
    <string name="swipechant_count"><u>Swipe and Chant</u></string>
    <string name="swipechant_count_text">Use simple finger based swipe utility to keep chanting God’s name.\n</string>
    <string name="key_in_mode"><u>Key-in Mode</u></string>
    <string name="key_in_mode_text">Use preselected God’s name and chant using a simple keyword select option.\n</string>
    <string name="japa_mala_mode"><u>Japamala Mode</u></string>
    <string name="japa_mala_mode_text">We know that some of us would like to use the  Japamala or the Rosary for chanting God’s name.  To meet this specific requirement of yours, we have provided you with the e-Japamala interface.\n</string>
    <string name="print_and_send">Print &amp; Send</string>
    <string name="print_and_send_text">As you write (chant) the name of your favorite God or Kula Dayvam, you can use the unique facility provided by Namakoti to have your Namas printed and mailed to temples – either of your choice or those that are usually know for accepting such books (eg. Bhadrachalam, in Telangana, for Rama Koti).\n</string>
    <string name="instructions_how_to_write">Instructions on how to write Nama Koti\n</string>
    <string name="instructions_how_to_write_text"> While we don’t ourselves prescribe any particular rules for using this application, we believe that in the interest of the Bhakta that it is would be beneficial to adhere to the following when Chanting God’s name using NamaKoti.</string>
    <string name="instructions_how_to_write_text2">\nPreferably start the Chanting process, after taking your bath.

\n\nDonot write or Chant the name, when doing activities such as eating, attending natures call and other similar activities.

\n\nPlease focus on the God when writing/chanting his name.  Technology is being used as a tool to help you which hitherto made the whole process cumbersome, bit that doesnot however mean you give up the basic tenants of the processes.  

\n\nRemember that Chanting a God’s name is the most important way of reaching to the Supreme Being and that it should be done with Devotion and Dedication showing the highest of respect and sincerity in the process.  </string>
    <string name="language">Language</string>
    <string name="selectlanguage">Jai Sri Ram</string>
    <string name="namam">Namam</string>
    <string name="note"><u>Note:</u></string>
    <string name="beyond_ten_thousand">Beyond 10000 chants, you will need to upgrade your account by paying INR 116 or USD 2</string>
    <string name="selectnamam">Jai Sri ram/Others</string>
    <string name="nameoftheperson">Name Of The Person</string>
    <string name="save">Save</string>
    <string name="select_language_text">Select the Language and Nama of your choice</string>
    <string name="selected_god">Selected God</string>
</resources>