<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1.0" >

    <include
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        layout="@layout/home_hdr_phone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1" >

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.04" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:orientation="vertical"
                android:weightSum="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/what_is_namakoti"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_size_4_introduction_hdr" />

                <!-- <View
                    android:layout_width="@dimen/width_of_line_view_introduction"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/margin_bottem_introduction"
                    android:background="@color/red" /> -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/margin_bottem_introduction"
                    android:gravity="center"
                    android:text="@string/jai_sri_ram_namakoti"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_4_introduction_hdr"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/in_the_hindu_darma"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    android:textSize="@dimen/text_size_4_introduction" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/nowwith_nama_koti"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/text_size_4_introduction"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    android:text="@string/so_whether_you_are"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_4_introduction" />

                <TextView
                    android:id="@+id/swipechant_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/swipechant_count"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_4_introduction"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/swipechant_count_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_4_introduction" />

                <TextView
                    android:id="@+id/key_in_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/key_in_mode"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_4_introduction"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/key_in_mode_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_4_introduction" />

                <TextView
                    android:id="@+id/japa_mala_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/japa_mala_mode"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_4_introduction"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/japa_mala_mode_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_4_introduction" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/print_and_send"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_4_introduction"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/print_and_send_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_4_introduction" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/instructions_how_to_write"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_4_introduction"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/instructions_how_to_write_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_4_introduction" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/instructions_how_to_write_text2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_4_introduction" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.02" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>