<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:id="@+id/what_is_namakoti_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/what_is_nama_koti_expand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:contentDescription="collapse"
            android:gravity="center"
            android:padding="@dimen/margin_top_bottem_spinners_in_adapter"
            android:text="+"
            android:textColor="@color/orange"
            android:textSize="@dimen/textSize_for_et_enternama" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_top_bottem_spinners_in_adapter"
            android:text="@string/what_is_namakoti"
            android:textColor="@color/orange"
            android:textSize="@dimen/textSize_for_et_enternama" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/what_is_namakoti_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.06"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_top_bottem_spinners_in_adapter"
            android:textColor="@color/orange" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.94"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/margin_top_bottem_spinners_in_adapter"
                android:text="@string/what_is_namakoti_text"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_for_et_enternama" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/print_and_send"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_for_et_enternama"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/margin_top_bottem_spinners_in_adapter"
                android:text="@string/what_is_namakoti_text2"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_for_et_enternama" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_bottem_introduction"
                android:gravity="center"
                android:text="@string/jai_sri_ram_namakoti"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_for_et_enternama"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>